# FPGA-BoardlessBench

./: .cursorrules  .gitignore  ARCHITECTURE_MANIFEST.md  AddInfo_LicenseComplianceReport.md  AddInfo_Loadmap.md  AddInfo_MAP_FIXED_NOREPLACE.md  AddInfo_RTOS.md  AddInfo_RTOS_RemoteprocAmap.md  AddInfo_history.md  AddInfo_verilator.md  CMakeLists.txt  Makefile  README.md  docker-compose.yml  spec.md  start_lab.sh  walkthrough.md
.agents/: AGENTS.md.template
.antigravity/: mcp_config.json.template
.devcontainer/: Dockerfile  devcontainer.json
dashboard/: ARCHITECTURE_MANIFEST.md  README.md  rebuild_dashboard.sh  server.js
dashboard/client/: README.md  package-lock.json  package.json
dashboard/client/src/: App.css  App.jsx
dashboard/client/src/components/: DashboardContext.jsx  GpioPanel.jsx  HdmiOutput.jsx  MemoryErrorModal.jsx  OledDisplay.jsx  RegisterMonitor.jsx  RegisterTracer.jsx  SdCardPanel.jsx  SpiAdcPanel.jsx  UartTerminal.jsx
docs/architecture/: AddInfo_ASan.md  AddInfo_GuardPage.md  AddInfo_Loadmap.md  AddInfo_RTOS.md  AddInfo_WhyUseVerilator.md  AddInfo_history.md  AddInfo_vs_QEMU.md
docs/history/: Idea.md
scripts/: ARCHITECTURE_MANIFEST.md  README.md  gen_vfpga.py  test_gen_vfpga.py
scripts/vfpga/: __init__.py  generator_base.py  generator_rtl.py  generator_shim.py  models.py  orchestrator.py  parser.py
scripts/vfpga/templates/: libfpgashim.c.template
src/: README.md
src/controller/: vlogic_controller.py
src/include/: sim_traits.h
src/peripherals/: CMakeLists.txt  README.md
src/peripherals/common/: i2c_slave.cpp  i2c_slave.hpp  spi_slave.cpp  spi_slave.hpp  uart_device.cpp  uart_device.hpp
src/peripherals/i2c/: i2c_eeprom.c  i2c_eeprom.cpp
src/peripherals/i2c_spi/: ssd1306.cpp
src/peripherals/spi/: spi_adc.cpp  spi_flash.cpp
src/peripherals/uart/: uart_loopback.c  uart_loopback.cpp
tests/: Development_Workflow.md  README.md  regression_test.py  run_tests.sh  scenario_runner.sh
tests/scenarios/: ARCHITECTURE_MANIFEST.md
tests/scenarios/01_standard_uio/: README.md  fbb_layout.json  main.c
tests/scenarios/02_multi_i2c/: README.md  config.dts  main.c  run.sh  vfpga_device_config.h
tests/scenarios/02b_multi_spi/: README.md  README.md~  config.dts  fbb_layout.json  main.cpp  run.sh  vfpga_device_config.h
tests/scenarios/02c_pl_spi/: CMakeLists.txt  README.md  config.dts  fbb_layout.json  main.cpp  run.sh  vfpga_device_config.h  vfpga_top.v
tests/scenarios/02d_oled_i2c/: CMakeLists.txt  README.md  config.dts  fbb_layout.json  main.cpp  run.sh  vfpga_device_config.h
tests/scenarios/03_uart_console/: README.md  config.dts  fbb_layout.json  main.c  run.sh  vfpga_device_config.h
tests/scenarios/04_dev_mem_legacy/: run.sh  vfpga_device_config.h
tests/scenarios/04b_dev_mem_violation_legacy/: README.md  config.dts  fbb_layout.json  main.c  run.sh  vfpga_device_config.h  vfpga_top.v
tests/scenarios/05_multi_v_files/: CMakeLists.txt  README.md  run.sh  vfpga_device_config.h
tests/scenarios/06_gpio/: README.md  fbb_layout.json  main.c  vfpga_device_config.h
tests/scenarios/07_minimum_template/: run.sh  vfpga_device_config.h
tests/scenarios/08_multi_uart/: README.md  config.dts  fbb_layout.json  main.c  run.sh  vfpga_device_config.h
tests/scenarios/09_remoteproc_amp/: CMakeLists.txt  Makefile  README.md  config.dts  main.c  mcore_baremetal.c  mcore_baremetal2.c  run.sh  vfpga_top.v
tests/scenarios/10_amp_mcore_freertos/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  main.c  mcore_rtos.c  run.sh
tests/scenarios/11_amp_mcore_threadx/: .gitignore  CMakeLists.txt  README.md  config.dts  main.c  mcore_threadx.c  run.sh  vfpga_device_config.h
tests/scenarios/12_amp_mcore_cmsis-rtos2-freertos/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  cmsis_compiler.h  main.c  run.sh
tests/scenarios/13_amp_mcore_cmsis-rtos2-threadx/: .gitignore  CMakeLists.txt  README.md  main.c  mcore_rtos.c  run.sh
tests/scenarios/14_amp_mcore_OpenAMP_baremetal/: .gitignore  CMakeLists.txt  README.md  config.dts  main.c  mcore_baremetal.c  run.sh  vfpga_device_config.h
tests/scenarios/15_amp_mcore_OpenAMP_freertos/: CMakeLists.txt  README.md  main.c  mcore_rtos.c  run.sh  vfpga_top.v
tests/scenarios/16_amp_mcore_Rust_baremetal/: CMakeLists.txt  README.md  host_bsp.rs  main.c  mcore.rs  run.sh  vfpga_top.v
tests/scenarios/17_amp_mcore_Rust_embassy/: .gitignore  README.md  config.dts  run.sh
tests/scenarios/17_amp_mcore_Rust_embassy/a_core/: main.c
tests/scenarios/17_amp_mcore_Rust_embassy/m_core/: Cargo.toml
tests/scenarios/17_amp_mcore_Rust_embassy/m_core/src/: host_bsp.rs  main.rs
tests/scenarios/18_amp_mcore_Rust_rtic/: .gitignore  CMakeLists.txt  README.md  run.sh
tests/scenarios/18_amp_mcore_Rust_rtic/a_core/: main.c
tests/scenarios/18_amp_mcore_Rust_rtic/m_core/: Cargo.toml
tests/scenarios/18_amp_mcore_Rust_rtic/m_core/src/: fbb_pac.rs  host_bsp.rs  main.rs
tests/scenarios/19_acore_sd/: README.md  config.dts  fbb_layout.json  main.c  run.sh  vfpga_device_config.h
tests/scenarios/P01_frdmIMX/: CMakeLists.txt  Makefile  README.md  config.dts  fbb_layout.json  imx8mp_config.dts  imx95_config.dts  main.cpp  run.sh  vfpga_device_config.h  vfpga_top.v
tests/scenarios/P01_frdmIMX/hal/: ARCHITECTURE_MANIFEST.md  implementation_status.md  imx_hal.cpp  imx_hal.hpp
tests/scenarios/S01_cpp_lfsr_sequencer/: CMakeLists.txt  README.md  config.dts  fbb_layout.json  main.cpp  run.sh  vfpga_device_config.h  vfpga_top.v
